tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_monomorphization_tests_mutually_recursive_types_error/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type `Odd` is recursive
  ┌─ src/main.nr:7:13
  │
7 │             Zero,
  │             ---- All types in Noir must have a known size at compile-time
  │

Aborting due to 1 previous error
