tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_monomorphization_tests_mutually_recursive_types_error/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Odd` is recursive
  ┌─ src/main.nr:7:13
  │
7 │             Zero,
  │             ---- All types in Noir must have a known size at compile-time
  │

Aborting due to 1 previous error
